css/style.css
/* ... */
/*
.search-box .search-txt:hover + .search-btn,
.search-box .search-txt:hover {
    border-color: #666666;
    transition: all .8s;
}*/

.search .search-extra {
    border: 1px solid #ff6700;
    width: 245px;
    position: absolute;
    top: 49px;
    left: 0;
    display: none;
    z-index: 10;
}

.search .search-extra a {
    display: block;
    background: #fff;
    padding: 8px 10px;
    position: relative;
}

.search .search-extra a:hover {
    background: #FAFAFA;
}

.search .search-extra .spec_name {
    color: #424242;
    font-size: 12px;
    text-align: right;
}

.search .search-extra .result {
    color: #B5B5B5;
    font-size: 10px;
    position: absolute;
    right: 15px;
}

/*nav show */

.navMenu {
    z-index: 30;
    position: absolute;
    left: 0;
    top: 140px;
    background: #fff;
    border-top: 1px solid #e0e0e0;
    border-bottom: 1px solid #e0e0e0;
    box-shadow: 1px 2px 5px #CCCCCC;
    padding: 28px 0;
    width: 100%;
}

.nav_menu_list {
    margin-left: 5%;
}

.nav_menu_list_img {
    display: block;
    border-right: 1px solid #e0e0e0;
    height: 110px;
    width: 203px;
    text-align: center;
}

.nav_menu_list_title {
    margin-top: 20px;
    text-align: center;
    letter-spacing: 1px;
    display: block;
    color: #757575;
    font-size: 12px;
}

.nav_menu_list_price {
    display: block;
    text-align: center;
    color: #ff6700;
    font-size: 12px;
}

.nav_menu_spec li {
    width: 204px;
    margin-left: -20px;
    float: left;
}

.nav_menu_show1,
.nav_menu_show2,
.nav_menu_show3,
.nav_menu_show4,
.nav_menu_show5,
.nav_menu_show6,
.nav_menu_show7 {
    display: none;
}

/*catagory css*/

.category {
    height: 460px;
    margin-bottom: 15px;
    position: relative;
}

.category_list {
    width: 234px;
    background: #000000;
    background: rgba(0, 0, 0, 0.6);
    z-index: 20;
    position: absolute;
    padding: 20px 0 20px 0;
    top: 0;
    left: 0;
}

.category_list li .category_item_icon {
    display: block;
    height: 42px;
    color: #fff;
    line-height: 42px;
    padding-left: 30px;
    background: url(../img/navMenu_icon.png) no-repeat 190px 5px;
    z-index: 30;
}

.category_list li .category_item_icon:hover {
    background-color: #ff6700;
}

.category .category_hot_list {
    z-index: 10;
    height: 460px;
    /*width: 6130px;*/
}

.category .category_hot_list li {
    position: absolute;
    float: left;
    width: 1226px;
}

.category .category_hot_list img {
    height: 460px;
}

/*category hot_list controls*/
.category_hot .hot_list_controls .ui-prev {
    cursor: pointer;
    position: absolute;
    top: 50%;
    z-index: 999;
    width: 41px;
    height: 69px;
    left: 234px;
    margin-top: -35px;
    background: url(../img/icon/imgControls_prev.png) no-repeat;
    opacity: 0.3;
}

.category_hot .hot_list_controls .ui-next {
    cursor: pointer;
    position: absolute;
    top: 50%;
    z-index: 999;
    width: 41px;
    height: 69px;
    right: 0px;
    margin-top: -35px;
    background: url(../img/icon/imgControls_next.png) no-repeat;
}

.category_hot .hot_list_controls a {
    opacity: 0.3;
    -webkit-transition: all .3s;
    -moz-transition: all .3s;
    -ms-transition: all .3s;
    -o-transition: all .3s;
    transition: all .3s;
}

.category_hot .hot_list_controls a:hover {
    opacity: 1.0;
    -webkit-transition: all .3s;
    -moz-transition: all .3s;
    -ms-transition: all .3s;
    -o-transition: all .3s;
    transition: all .3s;
}


/*category_item*/
.category_list .category_item_box {
    z-index: 20;
    background: #fff;
    position: absolute;
    left: 235px;
    top: 0;
    height: 460px;
    /*padding-right: 40px;*/
    display: none;
    border-top: solid 1px #e0e0e0;
    -webkit-box-shadow: 0 8px 16px #000000;
    -ms-box-shadow: 0 8px 16px #000000;
    -ms-box-shadow: 0 8px 16px rgba(0, 0, 0, 0.18);
    box-shadow: 0 8px 16px #000000;
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.18);
    /*width: 810px;*/
}

.category_list .category_item_box:hover {}

.category_list .category_item_box .category_item_list {
    /*margin-right: 20px;*/
    width: 265px;
}

.category_item_spec {
    height: 41px;
}

.category_item_spec_detail {
    width: 170px;
    display: block;
    height: 41px;
    line-height: 41px;
    margin: 18px 0 18px 20px;
    color: #333;
}

.category_item_spec_detail .category_item_title {
    height: 41px;
    line-height: 41px;
    position: relative;
    top: -15px;
    margin-left: 10px;
}

.category_item_spec_detail:hover {
    color: #ff6700;
}

.category_item_spec_detail .category_item_btn {}

.category_item_spec_detail .category_item_btn:hover {
    color: #fff;
    background: #ff6700;
}

.category_item_spec .category_item_btn {
    width: 50px;
    height: 24px;
    margin-top: 30px;
    display: block;
    border: 1px solid #ff6700;
    color: #ff6700;
    text-align: center;
    line-height: 24px;
    -webkit-transition: all .3s;
    -moz-transition: all .3s;
    -ms-transition: all .3s;
    -o-transition: all .3s;
    transition: all .3s;
}

.category_item_spec .category_item_btn:hover {
    cursor: pointer;
    background: #ff6700;
    color: #fff;
    -webkit-transition: all .3s;
    -moz-transition: all .3s;
    -ms-transition: all .3s;
    -o-transition: all .3s;
    transition: all .3s;
}

.category .category_move {
    position: absolute;
    bottom: 20px;
    left: 1100px;
    z-index: 30;
}

.category .category_move li {
    margin: 0 5px;
    float: left;
}

.category .category_move li span, .common_move {
    width: 6px;
    height: 6px;
    display: block;
    border: 2px solid #fff;
    border-color: rgba(255,255,255,0.3);
    -ms-border-radius: 10px;
    border-radius: 10px;
    background: #000000;
    background: rgba(0,0,0,0.4);
    overflow: hidden;
}

.category .category_move li .cur_move {
    background: #fff;
    background: rgba(255,255,255,0.4);
    border-color: #000000;
    border-color: rgba(0,0,0,0.3);
}
/* ... */

